Fixed FBO memory leak