@@ -4,7 +4,6 @@ import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
 import java.lang.foreign.ValueLayout;
-import panamagl.performance.PanamaMemorySession;
 
 
 /**
@@ -13,48 +12,48 @@ import panamagl.performance.PanamaMemorySession;
  * @author Martin Pernollet
  */
 public abstract class AbstractGL implements GL {
-    protected MemorySession scope;
-    protected SegmentAllocator allocator;
+  protected MemorySession scope;
+  protected SegmentAllocator allocator;
 
-    public AbstractGL(){
-        try {
-            scope = MemorySession.openConfined();//PanamaMemorySession.get();
-            allocator = SegmentAllocator.newNativeArena(scope);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+  public AbstractGL() {
+    try {
+      scope = MemorySession.openConfined();
+      allocator = SegmentAllocator.newNativeArena(scope);
+    } catch (Exception e) {
+      e.printStackTrace();
     }
+  }
 
-    /////////////////////////////////////////////
+  /////////////////////////////////////////////
 
-    @Override
-    public MemorySession getScope() {
-        return scope;
-    }
+  @Override
+  public MemorySession getScope() {
+    return scope;
+  }
 
-    @Override
-    public SegmentAllocator getAllocator() {
-        return allocator;
-    }
+  @Override
+  public SegmentAllocator getAllocator() {
+    return allocator;
+  }
 
-    @Override
-    public MemorySegment alloc(String value) {
-        return allocator.allocateUtf8String(value);
-    }
-    
-    @Override
-    public MemorySegment alloc(double[] value) {
-        return allocator.allocateArray(ValueLayout.JAVA_DOUBLE, value);
-    }
+  @Override
+  public MemorySegment alloc(String value) {
+    return allocator.allocateUtf8String(value);
+  }
 
-    @Override
-    public MemorySegment alloc(float[] value) {
-        return allocator.allocateArray(ValueLayout.JAVA_FLOAT, value);
-    }
+  @Override
+  public MemorySegment alloc(double[] value) {
+    return allocator.allocateArray(ValueLayout.JAVA_DOUBLE, value);
+  }
 
-    @Override
-    public MemorySegment alloc(int[] value) {
-        return allocator.allocateArray(ValueLayout.JAVA_INT, value);
-    }
+  @Override
+  public MemorySegment alloc(float[] value) {
+    return allocator.allocateArray(ValueLayout.JAVA_FLOAT, value);
+  }
+
+  @Override
+  public MemorySegment alloc(int[] value) {
+    return allocator.allocateArray(ValueLayout.JAVA_INT, value);
+  }
 
 }
